# ZeroClaw-Plus-Plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ccp-httplib/: readme.txt
include/openssl-3.5.5/: version.txt
src/: channels_module.cpp  channels_module.hpp  identity.hpp  lib.hpp  main.cpp  migration.hpp  multimodal.hpp  providers_module.cpp  providers_module.hpp  tools_module.cpp  tools_module.hpp
src/agent/: agent.cpp  agent.hpp  agent_module.hpp  classifier.hpp  dispatcher.cpp  dispatcher.hpp  loop_.cpp  loop_.hpp  memory_loader.hpp  prompt.hpp
src/approval/: approval.cpp  approval.hpp
src/auth/: auth.cpp  auth.hpp  http_adapter.cpp  oauth.cpp  oauth.hpp  oauth_provider.cpp  oauth_provider.hpp  profiles.cpp  profiles.hpp
src/channels/: cli.hpp  discord.cpp  discord.hpp  email_channel.cpp  email_channel.hpp  irc.cpp  irc.hpp  matrix.cpp  matrix.hpp  nextcloud_talk.cpp  nextcloud_talk.hpp  nostr.cpp  nostr.hpp  other_channels.hpp  signal.cpp  signal.hpp  slack.cpp  slack.hpp  telegram.cpp  telegram.hpp  traits.hpp  whatsapp.cpp  whatsapp.hpp
src/config/: config.cpp  config.hpp  traits.hpp
src/cost/: cost.hpp  tracker.hpp  types.hpp
src/cron/: cron.cpp  cron.hpp  schedule.cpp  schedule.hpp  scheduler.cpp  scheduler.hpp  store.cpp  store.hpp  types.cpp  types.hpp
src/daemon/: daemon.cpp  daemon.hpp
src/doctor/: doctor.cpp  doctor.hpp
src/gateway/: api.cpp  api.hpp  gateway.cpp  gateway.hpp  sse.cpp  sse.hpp  static_files.cpp  static_files.hpp  ws.cpp  ws.hpp
src/hardware/: discover.hpp  hardware.hpp  (+2 more)
web/: package-lock.json
(+153 files in other folders)
